bin/testsuite/tests/compiler/src/errors/compiler420.swg
#global testerror "Err0406"
//#[Swag.PrintBc]
#test
{
    const d: s32
}
